--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,7 +17,7 @@ ARG NB_USER=jovyan
 
 LABEL maintainer="pontus.lurcock@brockmann-consult.de"
 LABEL name="avl-jh-hub"
-LABEL version="1.1.0.dev0"
+LABEL version="1.1.0"
 LABEL description="AVL JupyterHub hub image"
 
 USER root
